# git-changes-monitor

./: .gitignore  AGENTS.md  Cargo.toml  DENO_SETUP.md  QUICKSTART.md  QUICK_REFERENCE.txt  README.md  deno.json  gfm.json  install.ps1  test.md
.github/workflows/: release.yml
config/: default-config.json
src/: app.rs  app.tsx  event.rs  main.rs  main.ts  main.tsx  tui.rs
src/components/: BranchInfo.tsx  FileList.tsx  FilePreview.tsx  HelpMenu.tsx  StatusBar.tsx
src/config/: loader.rs  types.rs
src/git/: service.rs  types.rs
src/hooks/: useConfig.ts  useFileWatcher.ts  useGitStatus.ts
src/services/: config.ts  git.ts  watcher.ts
src/theme/: mod.rs  themes.rs  themes.ts  useTheme.ts
src/types/: config.ts  git.ts
src/ui/: branch_info.rs  file_list.rs  file_preview.rs  help_menu.rs  mod.rs  render.rs  status_bar.rs  utils.rs
src/utils/: debounce.ts  path-utils.ts
src/watcher/: service.rs
